[gd_scene load_steps=6 format=2]

[ext_resource path="res://Examples/ClickableSprite.tscn" type="PackedScene" id=1]
[ext_resource path="res://Examples/RedSprite.gd" type="Script" id=2]
[ext_resource path="res://Examples/BlueSprite.gd" type="Script" id=3]
[ext_resource path="res://Examples/GreenSprite.gd" type="Script" id=4]
[ext_resource path="res://Examples/ColorBar.gd" type="Script" id=5]

[node name="Example1" type="Node2D"]

[node name="World" type="Node2D" parent="."]

[node name="RedSprite" parent="World" instance=ExtResource( 1 )]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 262, 364 )
script = ExtResource( 2 )

[node name="GreenSprite" parent="World" instance=ExtResource( 1 )]
modulate = Color( 0.278431, 1, 0.101961, 1 )
position = Vector2( 524, 225 )
script = ExtResource( 4 )

[node name="BlueSprite" parent="World" instance=ExtResource( 1 )]
modulate = Color( 0.184314, 0.368627, 1, 1 )
position = Vector2( 731, 354 )
script = ExtResource( 3 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="UI"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.2
script = ExtResource( 5 )

[node name="Button" type="Button" parent="UI"]
anchor_left = 0.4
anchor_top = 0.2
anchor_right = 0.6
anchor_bottom = 0.25
margin_left = -6.0
margin_right = 6.0
margin_bottom = 20.0
text = "click to reset bar color"

[node name="Label" type="Label" parent="UI"]
anchor_left = 0.2
anchor_top = 0.8
anchor_right = 0.8
anchor_bottom = 0.9
margin_top = -14.0
text = "Try clicking on the sprites!"
align = 1
valign = 1

[connection signal="pressed" from="UI/Button" to="UI/ColorRect" method="_on_reset_button_pressed"]
